add_subdirectory(cdm) #Common data models
add_subdirectory(oso) 
add_subdirectory(dsl)
add_subdirectory(tdp)
add_subdirectory(tir)
#add_subdirectory(iml)

check_path_in_system_env_var("PATH" "C:/Program Files (x86)/Common Files/MVS/Runtime/Win32_i86" PATH_CONTAINS_MVS_RUNTIME32)
if (PATH_CONTAINS_MVS_RUNTIME32)
    check_path_in_system_env_var("PATH" "C:/Program Files (x86)/Common Files/MVS/Runtime/Win64_x64" PATH_CONTAINS_MVS_RUNTIME64)
    if (PATH_CONTAINS_MVS_RUNTIME64)
        message("Include MVS runtime library path to allow building project hoe")
        add_subdirectory(hoe)
    else()
    message(WARNING "Without MVS runtime library path, building project hoe is not allowed")
    endif()
else()
    message(WARNING "Without MVS runtime library path, building project hoe is not allowed")
endif()
